[package]
name = "rust-http-server"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
serde = {version = "1", features = ["derive"]}
serde_json = "*"
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter", "fmt"]}
dotenvy = "0.15"
tower-http = {version = "0.5", features = ["cors"]}