[package]
name = "arb-indexer"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio ={  version = "1", features = ["macros", "rt-multi-thread", "full"]}
ethers ={ version = "2", features = ["rustls"]}
dotenvy = "0.15"
sqlx = {version = "0.7", features = ["runtime-tokio", "macros", "postgres"]}
axum = {version = "0.7"}
serde = {version = "1", features = ["derive"]}
serde_json = "1"
